--- a/src/app/widgets/header/header.component.html
+++ b/src/app/widgets/header/header.component.html
@@ -1,15 +1,15 @@
 <mat-card class="header">
-  <mat-card-title class="header__title">{{title}}</mat-card-title>
+  <mat-card-title class="header__title" [routerLink]="''">{{title}}</mat-card-title>
   <div class="login">
     <ul class="login__navigation">
       <li class="login__navigation-item">
-        <a routerLink="/signup">Signup</a>
+        <a routerLink="/signUp">Signup</a>
       </li>
       <li class="login__navigation-item">
         <a routerLink="/login">Login</a>
       </li>
       <li class="login__navigation-item">
-        <a>Logout</a>
+        <a (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
