--- a/src/app/widgets/modify/modify.component.html
+++ b/src/app/widgets/modify/modify.component.html
@@ -3,7 +3,7 @@
         <mat-card-content>
           <div class="listText">
             <mat-card-title class="listText__piece-name">#{{eraData.id}}</mat-card-title>
-            <div class="listText__piece"><strong>Kor neve: </strong>
+            <div class="listText__piece"><strong>Társadalmi státusz/név/fogyasztói termék: </strong>
               <mat-form-field appearance="legacy">
                 <input matInput [(ngModel)]="eraData.name">
               </mat-form-field>
