--- a/src/app/widgets/header/header.component.html
+++ b/src/app/widgets/header/header.component.html
@@ -2,13 +2,13 @@
   <mat-card-title class="header__title" [routerLink]="''">{{title}}</mat-card-title>
   <div class="login">
     <ul class="login__navigation">
-      <li class="login__navigation-item">
+      <li *ngIf="!authService.isAuthenticated()" class="login__navigation-item">
         <a routerLink="/signUp">Signup</a>
       </li>
-      <li class="login__navigation-item">
+      <li *ngIf="!authService.isAuthenticated()" class="login__navigation-item">
         <a routerLink="/login">Login</a>
       </li>
-      <li class="login__navigation-item">
+      <li *ngIf="authService.isAuthenticated()" class="login__navigation-item">
         <a (click)="logout()">Logout</a>
       </li>
     </ul>
