--- a/src/app/main/sign-up/sign-up.component.html
+++ b/src/app/main/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="card">
   <div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
