--- a/src/app/main/user-management/user-management.component.html
+++ b/src/app/main/user-management/user-management.component.html
@@ -3,15 +3,13 @@
   <ng-container *ngSwitchCase="'resetPassword'">
     <div>
       <mat-form-field appearance="legacy" class="passwordReset">
-        <input matInput [(ngModel)]="oldPassword" type="text" id="oldPassword"
-               name="oldPassword" placeholder="Old Password">
-      </mat-form-field>
-      <mat-form-field appearance="legacy" class="passwordReset">
-        <input matInput [(ngModel)]="newPassword" type="text" id="newPassword"
+        <input matInput [(ngModel)]="newPassword" type="text" id="newPassword" required
+               minlength="6"
                name="newPassword" placeholder="New Password">
       </mat-form-field>
       <mat-form-field appearance="legacy" class="passwordReset">
-        <input matInput [(ngModel)]="confirmPassword" type="text"
+        <input matInput [(ngModel)]="confirmPassword" type="text" required
+               minlength="6"
                id="confirmPassword" name="confirmPassword" placeholder="Confirm
       Password">
       </mat-form-field>
