made more mobile friendly, auto resize

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-header id="header"></app-header>
-<div id="content">
-  <main>
-    <router-outlet></router-outlet>
-  </main>
+<div class="app-body" (window:resize)="onResize()">
+  <app-header id="header"></app-header>
+  <div id="content">
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </div>
 </div>
