--- a/src/app/widgets/data-table/data-table.component.html
+++ b/src/app/widgets/data-table/data-table.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <mat-form-field appearance="fill">
+    <mat-form-field class="numberOfRecords" appearance="fill">
       <mat-label>Rekordok száma: {{listRecordNumber}}</mat-label>
       <mat-select disableRipple>
         <mat-option (click)="setListRecordNumber(10)">10</mat-option>
