--- a/src/app/widgets/add-data/add-data.component.html
+++ b/src/app/widgets/add-data/add-data.component.html
@@ -65,11 +65,11 @@
     </div>
   </div>
   <div class="button">
-    <button class="btn btn-primary" *ngIf="admin"  ngbButtonLabel
+    <button class="submitButton" *ngIf="admin"  ngbButtonLabel
             (click)="postData({id: generateId(), nameType: eraNames, name: name, age: age, possessions: possessions, income: income, singleTime: singleTime, cost: cost, description: description, source: source})">
       Rekord feltöltése
     </button>
-    <button class="btn btn-primary" *ngIf="!admin"  ngbButtonLabel
+    <button class="submitButton" *ngIf="!admin"  ngbButtonLabel
             (click)="suggestData({id: generateId(), nameType: eraNames, name: name, age: age, possessions: possessions, income: income, singleTime: singleTime, cost: cost, description: description, source: source})">
       Rekord ajánlása
     </button>
