--- a/src/app/widgets/modify/modify.component.html
+++ b/src/app/widgets/modify/modify.component.html
@@ -39,8 +39,8 @@
               </mat-form-field>
             </div>
           </div>
-          <div><button class="btn btn-primary" (click)="updateData()">Rekord Frissítése</button></div>
-          <div><button class="btn btn-primary" (click)="returnFrontPage()">Mégse</button></div>
+          <div><button class="submitButton" (click)="updateData()">Rekord Frissítése</button></div>
+          <div><button class="submitButton" (click)="returnFrontPage()">Mégse</button></div>
         </mat-card-content>
       </mat-card>
 </div>
