--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card" [ngClass]="matCard">
   <div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
@@ -14,7 +14,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Jelszó</label>
         <input
           type="password"
           id="password"
@@ -27,14 +27,14 @@
       </div>
       <div>
         <button
-          class="btn btn-primary actionButton"
+          class="submitButton"
           type="submit"
           [disabled]="!authForm.valid"
         >
           Belépés
         </button>
       </div>
-      <div class="resetPassword actionButton">
+      <div class="resetPassword">
         Elfelejtetted a jelszavad?
         <a
           [routerLink]="'/passwordReset'"
