--- a/src/app/widgets/suggests-list/suggests-list.component.scss
+++ b/src/app/widgets/suggests-list/suggests-list.component.scss
@@ -1,37 +1,10 @@
-.listData {
-  width: 30%;
-  margin-right: 3em;
-  display: inline-block;
-}
-mat-card {
-  background-color: #c4dcfc;
-}
-.paginator {
-  position: absolute;
-  display: inline-block;
-}
-
+@import "src/app/widgets/data-table/data-table.component";
 .listText {
   &__icon{
-    &-trash {
-    }
-
-    &-cog {
-      position: absolute;
-      top: 1em;
-      right: 1em;
-    }
     &-plane {
       position: absolute;
       bottom: 1em;
       right: 1em;
     }
   }
-}
-
-i:hover {
-  cursor: pointer;
-}
-a:hover {
-  cursor: pointer;
 }
