--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,13 @@ a {
 ul {
   list-style-type: none;
 }
+
+.submitButton {
+  height: 2em;
+  width: 7em;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0.3em 0.3em #a5a5a5;
+  text-align: center;
+  text-decoration: none;
+}
