--- a/src/app/main/front-page/front-page.component.html
+++ b/src/app/main/front-page/front-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="authService.isAuthenticated()">
+<div *ngIf="authService.isAuthenticated()" [ngClass]="onMobile">
   <app-add-data></app-add-data>
 </div>
 <div>
