fixed global scss

--- a/src/app/main/password-reset/password-reset.component.html
+++ b/src/app/main/password-reset/password-reset.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="card" [ngClass]="matCard">
   <div>
     <form #authForm="ngForm" (ngSubmit)="resetPassword(authForm)">
       <div class="form-group">
@@ -15,11 +15,11 @@
       </div>
       <div>
         <button
-          class="btn btn-primary"
+          class="submitButton"
           type="submit"
           [disabled]="!authForm.valid"
         >
-          Reset
+          Új jelszó kérése
         </button>
       </div>
     </form>
