--- a/src/app/main/user-management/user-management.component.html
+++ b/src/app/main/user-management/user-management.component.html
@@ -13,7 +13,7 @@
                id="confirmPassword" name="confirmPassword" placeholder="Confirm
       Password">
       </mat-form-field>
-      <button class="btn btn-primary resetButton" (click)="handleResetPassword()">Confirm</button>
+      <button class="submitButton resetButton" (click)="handleResetPassword()">Megerősítés</button>
     </div>
   </ng-container>
   <!-- Recover Email -->
