--- a/src/app/main/user-management/user-management.component.scss
+++ b/src/app/main/user-management/user-management.component.scss
@@ -1,3 +1,5 @@
+@import "src/global";
+
 .passwordReset {
   display: block;
   width: 60%;
@@ -5,5 +7,6 @@
 }
 
 .resetButton {
-  margin-left: 50%;
+  margin-left: 45%;
 }
+
